# scicalc.cpp

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.sh
.github/workflows/: build.yml
cmake/: CMakeLists_nix.cmake  CMakeLists_osx.cmake
contrib/googletest-cmake/: CMakeLists.txt
include/: config.h.in  exam.hpp  expr.hpp  parser.hpp
src/: exam.cpp  expr.cpp  main.cpp  parser.cpp
tests/: test_main.cpp  test_parser.cpp
